--- a/.github/workflows/run_predictive_analytics.yml
+++ b/.github/workflows/run_predictive_analytics.yml
@@ -3,11 +3,11 @@ name: Run Predictive Analytics
 on:
   push:
     branches:
-      - main  # Replace with your branch name (e.g., 'main' or 'master')
+      - main  # This can be your default branch, e.g., 'main' or 'master'
 
 jobs:
   run_predictive_analytics:
-    runs-on: ubuntu-latest  # You can change to another environment if needed, e.g., python-latest
+    runs-on: ubuntu-latest  # You can change to other environments, e.g., python-latest
 
     steps:
       # Step 1: Checkout the code from GitHub
@@ -18,12 +18,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'  # Adjust the Python version based on your requirements
+          python-version: '3.x'  # Adjust based on your required Python version
 
       # Step 3: Install dependencies (e.g., Flask, pandas, mysql-connector, etc.)
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt  # Ensure you have a requirements.txt file for your dependencies
+          pip install -r requirements.txt  # Ensure you have a requirements.txt file
 
       # Step 4: Run your predictive analytics script
       - name: Run Predictive Analytics
