--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,5 @@
-# Base image for Python
-FROM python:3.9-slim
+# Base image for Python 3.10
+FROM python:3.10-slim
 
 # Install necessary Linux packages
 RUN apt-get update && apt-get install -y \
@@ -12,7 +12,7 @@ WORKDIR /var/www/html
 COPY . /var/www/html
 
 # Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
 
 # Configure Apache
 COPY 000-default.conf /etc/apache2/sites-available/000-default.conf
