--- a/DockerFile
+++ b/DockerFile
@@ -7,11 +7,11 @@ WORKDIR /app
 # Copy the Flask application and requirements file into the container
 COPY . /app
 
-# Install necessary Python dependencies
+# Install necessary Python dependencies from the requirements.txt file
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Expose the port the Flask app will run on
+# Expose the port Flask will run on
 EXPOSE 5000
 
 # Set the command to run the Flask app
-CMD ["python", "app.py"]
+CMD ["python", "predictive_analytics.py"]
