--- a/.github/workflows/run_predictive_analytics.yml
+++ b/.github/workflows/run_predictive_analytics.yml
@@ -3,7 +3,7 @@ name: Run Predictive Analytics
 on:
   push:
     branches:
-      - main  # This can be 'main' or 'master', depending on your branch name
+      - main  # Adjust if necessary
 
 jobs:
   run_predictive_analytics:
@@ -20,13 +20,13 @@ jobs:
         with:
           python-version: '3.8'
 
-
       # Step 3: Install dependencies
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip install --upgrade pip
+          pip install --no-cache-dir -r requirements.txt
 
       # Step 4: Run your predictive analytics script
       - name: Run Predictive Analytics
         run: |
-          python predictive_analytics.py  # Correct path if it's in the root directory
+          python path/to/your/predictive_analytics.py  # Adjust path if needed
